src/components/screen/Home.css
@import '../../root.css';

/*-------------
  General
-------------*/
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 100vw;

  & nav {
    list-style: none;
  }

  & a {
    text-decoration: none;
    cursor: pointer;
    opacity: 0.9;
  }

  & a:hover {
    opacity: 1;
  }

  & hr {
    width: 150px;
    height: 2px;
    background-color: #2196F3;
    border: 0;
    margin-bottom: 80px;
  }

  & section {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

.btn {
  color: #fff;
  border-radius: 4px;
  text-transform: uppercase;
  background-color: #2196F3;
  font-weight: 800;
  text-align: center;
}

.btn:disabled {
  color: #fff;
  cursor: not-allowed;
  border-radius: 4px;
  text-transform: uppercase;
  background-color: #ccc;
  font-weight: 800;
  text-align: center;
}


.btn-contact {
  cursor: pointer;
  width: 150px;
  height: 36px;
  margin-top: 30px;
  border-radius: 37.5px;
  background-color: #b13ee5;
  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.15);

  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  @media (--desktop) {
    margin-top: 40px;
    width: 200px;
    height: 48px;
    border-radius: 50px;
  }
  & .txt {
    height: 12px;
    margin-left: 42px;
    font-size: 12px;
    line-height: 1.0;
    color: #ffffff;

    @media (--desktop) {
      height: 18px;
      margin-left: 52px;
      font-size: 18px;
    }
  }
  & .right {
    width: 36px;
    height: 36px;
    margin-top: 30px;
    border-top-right-radius: 37.5px;
    border-bottom-right-radius: 37.5px;
    background-color: #8e2dba;

    display: flex;
    align-self: flex-end;
    justify-content: center;
    align-items: center;

    @media (--desktop) {
      width: 48px;
      height: 48px;
      margin-top: 40px;
      border-top-right-radius: 50px;
      border-bottom-right-radius: 50px;
    }

    & .icn-arrowforward {
      width: 24px;
      height: 24px;
      object-fit: contain;
    }
  }
}

/*----------------
  Hero Section
----------------*/

.hero {
  background-image: linear-gradient(to bottom, #3c96d2, #3ee5ac);
  color: #fff;
  text-align: center;
  min-height: 600px;

  display: flex;
  justify-content: center;
  align-self: stretch;
  & .header {
    margin: 20px;
    padding: 0 30px;
    width: 100%;
    color: #fff;

    display: flex;
    flex: 0 0 auto;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    @media (--desktop) {
      flex-direction: row;
    }

    & h2 {
      margin-bottom: 15px;
      @media (--desktop) {
        margin-bottom: 0;
      }
    }

    & nav {
      display: flex;
      & li {
        width: 60px;
        height: 12px;
        font-size: 12px;
        line-height: 1.0;
        text-align: center;
        @media (--desktop) {
          width: 82px;
          height: 20px;
          font-size: 20px;
        }
        & a {
          color: #ffffff;
        }
      }
      & li:first-child {
        margin-left: 0;  
      }
      & li:last-child {
        margin-right: 0;  
      }
    }
  }

  & h1 {
    font: bold 24px 'Open Sans', sans-serif;
    margin-top: 48px;
    margin-bottom: 24px;
    width: 790px;
    font-weight: 300;
    line-height: 1.25;
    text-align: center;
    color: #ffffff;
    @media (--desktop) {
      font: 48px 'Open Sans', sans-serif;
      margin-top: 116px;
      font-weight: 300;
    }
  }

  & .body {
    width: 820px;
    background-image: var(--icBgOvals);

    display: flex;
    flex-direction: column;
    align-items: center;

    & h3 {
      font: normal 9px 'Open Sans', sans-serif;
      height: 56px;
      font-family: NotoSansCJKkr-Demi;
      font-weight: 300;
      line-height: 1.56;
      text-align: center;
      color: #ffffff;

      display: flex;
      justify-content: center;
      align-items: center;
      @media (--desktop) {
        font: 18px 'Open Sans', sans-serif;
        font-weight: 300;
      }
    }

    & .img-wrapper {
      width: 60vw;
      margin-top: 44px;
      margin-bottom: 24px;
      @media (--desktop) {
        margin-top: 36px;
        margin-bottom: 60px;
      }
    }

    & a.btn {
      padding: 15px 40px;

      @media (--desktop) {
        padding: 0;
      }
    }
  }
}
/* ... */

